2015-12-11  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-384
	
	* src/m_rte.cc:  Simplified iyEmissionStandard to work with one
	general jacobian function.  Might still want to simplify it more.
	
	* src/jacobian.{cc,h}:  This function is (get_diydx).  It works
	from flags sent into it.
	
	* src/rte.cc:  Added some comments to functions I have created/changed.
	
	* src/methods.cc:  Added comments to jacobianAddWind.

2015-12-10  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-383

	* src/m_rte.cc (iyEmissionStandard): Added a table to give an
	overview of the main internal variables, as the list now is quite
	long. Als a few cosmetic changes

2015-12-10  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-382
	
	* src/rte.cc:  Did some code review and I found that polarized NLTE
	was treated inconsistently between (emission_rtstep) and the 
	jacobian calculations.  It was assumed that the source term is 
	unpolarized, solving this expression for polarized terms:
	"iy(iv,i) = tt[i] - t(iv,i,0) * ( bbar[iv] + J_n[i] );"
	but if J_n is polarized, the correct expression should be
	"iy(iv,i) = tt[i] + tmp(i,0) * bbar[iv] + J_bar[i];",
	with id_mat(tmp); tmp-=t(iv,joker,joker); and 
	mult(J_bar, tmp, J_n);
	
	This is now changed in (emission_rtstep).

2015-12-07  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-381
	
	* src/{m_linerecord,methods}.cc:  Added 
	abs_linesSetParameterForMatchingLines to set individual line 
	parameters for matching lines.  Also added pressure exponents 
	to the list of supported parameters.
	
	* src/pressurebroadeningdata.{cc,h}:  Added some functions to
	easier set parameters.

2015-12-04  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-380
	
	For iyEmissionStandard only now...
	Made a function (get_ppath_pmat_and_tmat) that replaces the 
	combination of get_ppath_pmat, the wind correction and the
	transmission matrix calculations.  It also takes over 